fixed guess background colors in dark mode

--- a/assets/css/app-dark.css
+++ b/assets/css/app-dark.css
@@ -52,6 +52,15 @@ body.dark-mode {
   body.dark-mode section#game #top-half #guesses-container .guess {
     color: var(--white);
   }
+    body.dark-mode section#game #top-half #guesses-container .guess.wrong {
+      background-color: var(--window-lose2);
+    }
+    body.dark-mode section#game #top-half #guesses-container .guess.skipped {
+      background-color: var(--window-skip1);
+    }
+    body.dark-mode section#game #top-half #guesses-container .guess.correct {
+      background-color: var(--window-win2);
+    }
     body.dark-mode section#game #top-half #guesses-container .guess .symbol {
       border-color: var(--white);
     }
